# task-manager

./: .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pylint.yml  test.yml  tests.yml
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: status.json  test_data.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: label.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: status.json
task_manager/statuses/migrations/: 0001_initial.py
task_manager/task_manager/: settings.py  urls.py
task_manager/tasks/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: task.json
task_manager/tasks/migrations/: 0001_initial.py  0002_labelandtask_task_labels.py  0003_alter_labelandtask_label_alter_labelandtask_task.py
task_manager/templates/: base.html  base_auth.html  home.html  home_auth.html  main.html
task_manager/templates/labels/: create_label.html  create_or_update_label.html  delete_label.html  labels.html  update_label.html
task_manager/templates/statuses/: create_status.html  delete_status.html  statuses.html  update_status.html
task_manager/templates/tasks/: create_task.html  delete_task.html  (+3 more)
task_manager/users/: forms.py  tests.py  urls.py  views.py
(+8 files in other folders)
