[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["vlad moryakov <sat1sfy@vk.com>"]
readme = "README.md"
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.3"
python-dotenv = "^0.21.0"
dj-database-url = "^0.5.0"
gunicorn = "^20.1.0"
django-bootstrap4 = "^22.2"
django-filter = "^22.1"
rollbar = "^0.16.3"
psycopg2-binary = "^2.9.2"


[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
